[project]
name = "pychadgpt"
version = "0.1.0"
description = "Python library to use chadgpt API"
authors = [
    {name = "shsmad", email = "shsmad@gmail.com"},
]
dependencies = ["requests>=2.32.5", "pydantic>=2.12.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file = ".env"
clear = "rm -rf .pytest_cache .ruff_cache .wheel_cache dist"

[tool.ruff]
target-version = "py312"
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "*_pb2*.py",
    "setup.py",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "A003",
    "D107",
    "D202",
    "D203",
    "D401",
    "COM812",
]
select = [
    "A", # builtins
    "B", # bugbear
    "C4", # comprehensions
    "COM", # commas
    # "D",   # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PT", # pytest-style
    "S", # bandit
    "SIM", # simplify
    "T1", # debugger
    "T2", # print
    "UP", # pyupgrade
    "W", # pycodestyle
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]


[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101"]

[tool.ruff.lint.isort]
lines-between-types = 1
known-first-party = ["test"]
known-local-folder = ["src"]
force-single-line = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# disallow_subclassing_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
# allow_redefinition = true
pretty = true
follow_imports = "skip" # skip/silent
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
warn_no_return = true
plugins = [
  # "pydantic.mypy",
  # "sqlmypy"
]
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
